--- a/tp-2/exo-1/style.css
+++ b/tp-2/exo-1/style.css
@@ -5,7 +5,13 @@ html {
   margin: 0;
   padding: 0;
 }
-
+.main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .isRotated {
   transform: rotate(90deg);
 }
