--- a/tp-2/exo-3/style.css
+++ b/tp-2/exo-3/style.css
@@ -1,4 +1,13 @@
+.main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 img {
-  width: 100px;
-  height: 100px;
+  margin: 15px;
+  width: 300px;
+  height: 300px;
 }
